# RQLite

./: .gitignore  Cargo.toml  Install.md  LICENSE.txt  MDB.AXM  Readme.md  meta.json  meta_table.json  release.sh  test.db  tree.json
crates/axmos-db/: Cargo.toml  axmosdb.db  output.dot
crates/axmos-db/src/: lib.rs  main.rs  protocol.rs
crates/axmos-db/src/common/: errors.rs  mod.rs
crates/axmos-db/src/configs/: mod.rs
crates/axmos-db/src/database/: errors.rs  mod.rs  runner.rs  schema.rs  schema_old.rs  stats.rs
crates/axmos-db/src/io/: cache.rs  frames.rs  logger.rs  mod.rs  pager.rs  recovery.rs  wal.rs
crates/axmos-db/src/io/disk/: mod.rs  unix.rs
crates/axmos-db/src/io/tests/: cache.rs  disk.rs  mod.rs  pager.rs  wal.rs
crates/axmos-db/src/macros/: as_slice.rs  enums.rs  id_type.rs  make_shared.rs  mod.rs  numeric.rs  repr_enum.rs  test_gen.rs  vector.rs
crates/axmos-db/src/macros/tests/: serialization.rs
crates/axmos-db/src/multithreading/: coordinator.rs  frames.rs  mod.rs  runner.rs  tests.rs  threadpool.rs
crates/axmos-db/src/planner/: bounds.rs  filter.rs  groupby.rs  index_selection.rs  join.rs  mod.rs  orderby.rs  plan.rs  project.rs  scan.rs
crates/axmos-db/src/runtime/: builder.rs  context.rs  ddl.rs  dml.rs  eval.rs  mod.rs  validator.rs
crates/axmos-db/src/runtime/ops/: agg.rs  aggregate.rs  delete.rs  distinct.rs  filter.rs  index_scan.rs  insert.rs  join.rs  limit.rs  materialize.rs  mod.rs  project.rs  seq_scan.rs  sort.rs  update.rs  values.rs
crates/axmos-db/src/runtime/tests/: mod.rs  tests.rs  utils.rs
crates/axmos-db/src/schema/: base.rs  catalog.rs  mod.rs  stats.rs
crates/axmos-db/src/schema/tests/: mod.rs  tests.rs  utils.rs
crates/axmos-db/src/sql/: analyzer.rs  ast.rs  lexer.rs  mod.rs  parser.rs  preparator.rs
crates/axmos-db/src/sql/binder/: analyzer.rs  ast.rs  binder.rs  bounds.rs  mod.rs  tests.rs
crates/axmos-db/src/sql/executor/: build.rs  context.rs  ddl.rs  eval.rs  mod.rs
crates/axmos-db/src/sql/executor/ops/: agg.rs  delete.rs  filter.rs  insert.rs  limit.rs  materialize.rs  mod.rs  project.rs  seq_scan.rs  sort.rs  top_n.rs  update.rs  values.rs
crates/axmos-db/src/sql/parser/: ast.rs  lexer.rs  mod.rs
crates/axmos-db/src/sql/parser/tests/: ddl.rs  delete.rs  insert.rs  mod.rs  select.rs  (+1 more)
crates/axmos-db/src/sql/planner/: exporter.rs  logical.rs  memo.rs  mod.rs  model.rs  physical.rs  plan.rs  prop.rs  rules.rs  stats.rs
crates/axmos-db/src/sql/tests/: ddl.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
crates/axmos-db/src/storage/: buffer.rs  cell.rs  latches.rs  mod.rs  ops.rs  page.rs  tests.rs  tuple.rs  wal.rs
crates/axmos-db/src/storage/core/: buffer.rs  mod.rs  traits.rs
crates/axmos-db/src/storage/tests/: mod.rs  utils.rs
crates/axmos-db/src/structures/: bplustree.rs  builder.rs  comparator.rs  kvp.rs  mod.rs  tests.rs
crates/axmos-db/src/structures/comparators/: fixed.rs  mod.rs  numeric.rs  varlen.rs
crates/axmos-db/src/structures/tests/: macros.rs  mod.rs  utils.rs
crates/axmos-db/src/tcp/: mod.rs  session.rs
crates/axmos-db/src/test_utils/: btree.rs  macros.rs  mod.rs  sql.rs
crates/axmos-db/src/tests/: mod.rs  tests.rs  utils.rs
crates/axmos-db/src/transactions/: accessor.rs  graph.rs  logger.rs  mem_table.rs  mod.rs  pool.rs  threadpool.rs  worker.rs
crates/axmos-db/src/tree/: accessor.rs  bplustree.rs  cell_ops.rs  mod.rs  tests.rs
crates/axmos-db/src/tree/comparators/: composite.rs  dyn.rs  fixed.rs  mod.rs  numeric.rs  varlen.rs
crates/axmos-db/src/tree/tests/: mod.rs  tests.rs  utils.rs
crates/axmos-db/src/types/: blob.rs  bool.rs  core.rs  date.rs  datetime.rs  id.rs  mod.rs  numeric.rs  sized_types.rs  varint.rs
crates/axmos-db/src/types/macros/: datatype.rs  mod.rs  numeric.rs
crates/axmos-db/src/types/tests/: macros.rs
(+141 files in other folders)
