[package]
name = "rqlite"
version = "0.1.0"
edition = "2021"
description = "A SQLite-compatible storage engine implementatio in Rust"
authors = ["Raul Moldes <raul.moldes.work@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RaulMoldes/rqlite"

[dependencies]
paste = "1.0.15"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
jemallocator = "0.5"
lazy_static = "1.4"
libc =  "0.2"
regex = "1.12.2"




[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
tempfile = "3.6.0"
libc = "0.2"
serial_test = "2.0"

[profile.dev]
debug = true


[alias]
miri-test = "miri test -- -Zmiri-ignore-leaks"
