[package]
name = "axmosdb"
version = "0.1.0"
edition = "2024"
description = "A SQLite-compatible storage engine implementatio in Rust"
authors = ["Raul Moldes <raul.moldes.work@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RaulMoldes/AxmosDB"

[dependencies]
paste = "1.0.15"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
jemallocator = "0.5"
lazy_static = "1.4"
libc =  "0.2"
regex = "1.12.2"
axmos-derive = { path = "../axmos-derive/"}
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3.4"
murmur3 = "0.5"
bytemuck = "1.24"
indexmap = "2"
rkyv = { version = "0.8", features = ["alloc"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tempfile = "3.6.0"
libc = "0.2"
serial_test = "2.0"
once_cell = "1.21.3"

[lib]
doctest = false
