[package]
name = "axmosdb"
version = "0.1.0"
edition = "2024"
description = "A fully functional database implementation."
authors = ["Raul Moldes <raul.moldes.work@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RaulMoldes/AxmosDB"

[dependencies]
paste = "1.0.15"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
jemallocator = "0.5"
lazy_static = "1.4"
libc =  "0.2"
regex = "1.12.2"
axmos-derive = { path = "../axmos-derive/"}
rand = "0.9.2"
rand_chacha = "0.9.0"
murmur3 = "0.5"
bytemuck = "1.24"
indexmap = "2"
rkyv = { version = "0.8", features = ["alloc"] }

[features]
# Flushes the database to disk `Database::flush()` automatically when dropped
# If not set, the database will be recovered by the wal on `Database::open()`
safe-drop = []

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tempfile = "3.6.0"
serial_test = "2.0"

[[bin]]
name = "axmos-server"
path = "src/bin/axmos_server.rs"

[lib]
doctest = false
